adding addiontal styles and dropdowns for top nav

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -157,7 +157,7 @@
   flex-wrap: wrap;
 }
 
-.loggedin-nav-btns {
+.hidden-nav-btns {
   display: flex;
   flex-direction: row;
   justify-content: left
