adds semantic-ui version of tabs since react-materialize tabs are slow to render their content

--- a/app/styles/auth.scss
+++ b/app/styles/auth.scss
@@ -20,6 +20,10 @@
     justify-content: center;
 }
 
+.tab-header{
+    margin-bottom: 50px;
+}
+
 .authContainer{
     display: flex;
     justify-content: center;
